--- a/service-gin/.editorconfig
+++ b/service-gin/.editorconfig
@@ -6,6 +6,6 @@ indent_size = 4
 indent_style = tab
 insert_final_newline = true
 
-[{*.yaml, *.yml}]
+[*.{json,yaml,yml}]
 indent_size = 2
 indent_style = space
