--- a/app-flask/kubernetes.yaml
+++ b/app-flask/kubernetes.yaml
@@ -43,6 +43,9 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/limit-rpm: "100"
   name: app-flask
 spec:
   ingressClassName: nginx
